cli/tests/ui/docker_compose_port_conflict.stderr
Error:   × docker-compose output cannot enforce separate capabilities for provides
  │ `admin` and `api` in component `/`: both route to port 8080 via endpoints
  │ `admin` and `api`
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/docker_compose_port_conflict.json5:9:32]
  7 │       endpoints: [
  8 │         { name: "api", port: 8080 },
    ·                              ──┬─
    ·                                ╰── port used by provide `api`
  9 │         { name: "admin", port: 8080 },
    ·                                ──┬─
    ·                                  ╰── port used by provide `admin`
 10 │       ],
    ╰────
  help: Expose each capability on its own port, or add an explicit L7 proxy
        component that maps each capability to a separate port.
